Fix intro card gap

--- a/packages/webapp/src/ui/components/pages/Landing/styles.scss
+++ b/packages/webapp/src/ui/components/pages/Landing/styles.scss
@@ -85,7 +85,7 @@
         justify-content: space-between;
         font-size: 14px;
         line-height: 20px;
-        gap: 16px;
+        gap: 26px;
         > .description {
           width: 100%;
         }
